package Creational.Factory.Interface;

public interface Shape {
    void draw();
}